Avance de proyecto con bootstrap

--- a/login.html
+++ b/login.html
@@ -23,9 +23,6 @@
               <li class="nav-item">
                 <a class="nav-link active li_color" aria-current="page" href="index.html">Inicio</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link li_color" href="newlp.html">Link</a>
-              </li>
               <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle li_color" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Proyectos
@@ -65,10 +62,12 @@
   
 
       <!-- FOOTER -->
-      <footer class="fixed-bottom container-fluid bg-dark p-3 mt-5" data-bs-theme="dark">
+     
+      <footer class="container-fluid fixed-bottom bg-dark-subtle p-3" data-bs-theme="dark">
         <div class="row " >
-          <div class="col-4  footer-columns text-center">
+          <div class="col-md-4 col-sm-6  footer-columns-color text-center">
             <p class="lead ">Redes sociales</p>
+            <hr>
             <div class="row">
               <div class="col-6">
                 <ul class="navbar-nav">
@@ -86,15 +85,8 @@
               </div>
 
             </div>
-            <!-- <ul>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Proyecto 1</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Proyecto 2</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Proyecto 3</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Proyecto 4</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Proyecto 5</a></li>
-            </ul> -->
           </div>
-          <div class="col-5">
+          <div class="col-md-5 col-sm-6">
             <div class="card">
               <div class="card-header" >
                 Quote
@@ -107,8 +99,10 @@
               </div>
             </div>
           </div>
-          <div class="col-3 border rounded footer-columns">
+          <div class="col-md-3 col-sm-12   footer-columns-color">
+           <hr class="d-sm-block d-md-none">
             <p class="lead text-center">Esto es otro contenido</p>
+            <hr>
           </div>
         </div>
       </footer>
