--- a/mis_proyectos.html
+++ b/mis_proyectos.html
@@ -90,10 +90,12 @@
 
 
 
-      <footer class="fixed-bottom container-fluid bg-dark p-3 mt-5" data-bs-theme="dark">
+     
+      <footer class="container-fluid fixed-bottom bg-dark-subtle p-3" data-bs-theme="dark">
         <div class="row " >
-          <div class="col-4  footer-columns text-center">
+          <div class="col-md-4 col-sm-6  footer-columns-color text-center">
             <p class="lead ">Redes sociales</p>
+            <hr>
             <div class="row">
               <div class="col-6">
                 <ul class="navbar-nav">
@@ -112,7 +114,7 @@
 
             </div>
           </div>
-          <div class="col-5">
+          <div class="col-md-5 col-sm-6">
             <div class="card">
               <div class="card-header" >
                 Quote
@@ -125,11 +127,12 @@
               </div>
             </div>
           </div>
-          <div class="col-3 border rounded footer-columns">
+          <div class="col-md-3 col-sm-12   footer-columns-color">
+           <hr class="d-sm-block d-md-none">
             <p class="lead text-center">Esto es otro contenido</p>
+            <hr>
           </div>
         </div>
       </footer>
-
 </body>
 </html>
