--- a/agregar.html
+++ b/agregar.html
@@ -10,7 +10,7 @@
     <title>Agregar</title>
 </head>
 <body class="bg-dark">
-
+  <!-- BARRA DE NAVEGACION -->
     <nav class="navbar  navbar-expand-lg  bg-body-tertiary p-0" data-bs-theme="dark">
         <div class="container-fluid navbar_color p-3">
           <a class="navbar-brand a_color fw-bold" href="index.html">DevTracker</a>
@@ -27,8 +27,8 @@
                   Proyectos
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a href="mis_proyectos.html" class="dropdown-item active">Mis proyectos</a></li>
-                  <li><a class="dropdown-item" href="agregar.html">Añadir nuevo proyecto</a></li>
+                  <li><a href="mis_proyectos.html" class="dropdown-item ">Mis proyectos</a></li>
+                  <li><a class="dropdown-item  active" href="agregar.html">Añadir nuevo proyecto</a></li>
                   <li><a class="dropdown-item" href="#">Editar un proyecto</a></li>
                 </ul>
               </li>
@@ -40,8 +40,10 @@
         </div>
       </nav>
 
+      <!-- CONTENIDO PRINCIPAL -->
+      <main class="container">
         <h1 class="text-light text-center mt-3">Agregar proyecto</h1>
-      
+      <!-- FORMULARIO AGREGAR PROYECTO -->
         <div class="container text-light p_inicio p-3 mt-5" data-bs-theme="dark">
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label ">Nombre del proyecto</label>
@@ -62,51 +64,16 @@
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Task 3">
               </div>
         </div>
+      </main>
+
         
+        <!-- FOOTER -->
 
-
-      <!-- <div class="container-fluid mt-5 bg-success">
-        <div class="row ">
-            <div class="col-3 border bg-danger">
-                <h5>Proyectos recientes</h5>
-                <ul class="">
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Proyecto 1</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Proyecto 2</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Proyecto 3</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Proyecto 4</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Proyecto 5</a></li>
-                </ul>
-            </div>
-            <div class="col-6 border">
-                <h5>Proyecto actual</h5>
-                <p>Descripcion del proyecto</p>
-                <h6>Tareas a realizar</h6>
-                <ul>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Task 1  fecha deadline</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Task 2  fecha deadline</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Task 3  fecha deadline</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Task 4  fecha deadline</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Task 5  fecha deadline</a></li> 
-                </ul>
-            </div>
-
-            <div class="col-3 border">
-                <h5>Tareas por vencer</h5>
-                <ul>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Task 1  fecha deadline</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Task 2  fecha deadline</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Task 3  fecha deadline</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Task 4  fecha deadline</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Task 5  fecha deadline</a></li>
-                </ul>
-            </div>
-        </div>
-      </div> -->
-
-      <footer class="fixed-bottom container-fluid bg-dark p-3 mt-5" data-bs-theme="dark">
+      <footer class="container-fluid fixed-bottom bg-dark-subtle p-3" data-bs-theme="dark">
         <div class="row " >
-          <div class="col-4  footer-columns text-center">
+          <div class="col-md-4 col-sm-6  footer-columns-color text-center">
             <p class="lead ">Redes sociales</p>
+            <hr>
             <div class="row">
               <div class="col-6">
                 <ul class="navbar-nav">
@@ -125,7 +92,7 @@
 
             </div>
           </div>
-          <div class="col-5">
+          <div class="col-md-5 col-sm-6">
             <div class="card">
               <div class="card-header" >
                 Quote
@@ -138,8 +105,10 @@
               </div>
             </div>
           </div>
-          <div class="col-3 border rounded footer-columns">
+          <div class="col-md-3 col-sm-12   footer-columns-color">
+           <hr class="d-sm-block d-md-none">
             <p class="lead text-center">Esto es otro contenido</p>
+            <hr>
           </div>
         </div>
       </footer>
