--- a/mis_proyectos.html
+++ b/mis_proyectos.html
@@ -9,7 +9,7 @@
 
     <title>DevTracker bootstrap</title>
 </head>
-<body class="bg-dark">
+<body class=" d-flex flex-column bg-dark min-vh-100">
 
     <nav class="navbar  navbar-expand-lg  bg-body-tertiary p-0" data-bs-theme="dark">
         <div class="container-fluid navbar_color p-3">
@@ -91,7 +91,7 @@
 
 
      
-      <footer class="container-fluid fixed-bottom bg-dark-subtle p-3" data-bs-theme="dark">
+      <footer class="container-fluid mt-auto bg-dark-subtle p-3" data-bs-theme="dark">
         <div class="row " >
           <div class="col-md-4 col-sm-6  footer-columns-color text-center">
             <p class="lead ">Redes sociales</p>
@@ -134,5 +134,36 @@
           </div>
         </div>
       </footer>
+
+      <!-- <footer class="container-fluid bg-dark-subtle p-3 bottom d-none d-md-block" data-bs-theme="dark">
+        <div class="row">
+          <div class="col-md-4 text-center">
+            <p class="lead">Redes sociales</p>
+            <hr>
+            <ul class="navbar-nav">
+              <li><a href="" class="nav-link link-underline-opacity-0">Red Social 1</a></li>
+              <li><a href="" class="nav-link link-underline-opacity-0">Red Social 2</a></li>
+              <li><a href="" class="nav-link link-underline-opacity-0">Red Social 3</a></li>
+            </ul>
+          </div>
+          <div class="col-md-5">
+            <div class="card">
+              <div class="card-header">Quote</div>
+              <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                  <p>La programación es el arte de enseñarle a la máquina a soñar en código.</p>
+                  <div class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></div>
+                </blockquote>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 text-center">
+            <p class="lead">Esto es otro contenido</p>
+            <hr>
+          </div>
+        </div>
+      </footer> -->
+
+
 </body>
 </html>
