--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <title>DevTracker bootstrap</title>
 </head>
-<body id="main-body">
+<body id="main-body" class=" d-flex flex-column bg-dark min-vh-100">
 
     <nav class="navbar  navbar-expand-lg  bg-body-tertiary p-0" data-bs-theme="dark">
         <div class="container-fluid navbar_color p-3">
@@ -89,7 +89,7 @@
       </div>
 
 
-      <footer class="container-fluid fixed-bottom bg-dark-subtle p-3" data-bs-theme="dark">
+      <footer class="container-fluid mt-auto bg-dark-subtle p-3" data-bs-theme="dark">
         <div class="row " >
           <div class="col-md-4 col-sm-6  footer-columns-color text-center">
             <p class="lead ">Redes sociales</p>
