--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="css/style.css">
 
     <title>DevTracker bootstrap</title>
 </head>
@@ -37,8 +37,8 @@
             </ul>
             <form class="d-flex">
               <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
-              <a class="btn button_color me-2" href="login.html" >Iniciar sesión</a>
-              <a class="btn button_color" href="registro.html">Registrarse</a>
+              <a class="btn button_color me-2" href="pages/login.html" >Iniciar sesión</a>
+              <a class="btn button_color" href="pages/registro.html">Registrarse</a>
             </form>
           </div>
         </div>
@@ -72,7 +72,7 @@
             <img src="images/code.avif" class="d-block w-100 h-100 object-fit-contain" style="max-height: 700px;" alt="...">
           </div>
           <div class="carousel-item" style="max-height: 500px;">
-            <img src="images/code.avif" class="d-block w-100 h-100 object-fit-contain" style="max-height: 700px;" alt="..." ge>
+            <img src="images/code.avif" class="d-block w-100 h-100 object-fit-contain" style="max-height: 700px;" alt="...">
           </div>
           <div class="carousel-item" style="max-height: 500px;">
             <img src="images/code.avif" class="d-block w-100 h-100 object-fit-contain" style="max-height: 700px;" alt="...">
