--- a/pages/registro.html
+++ b/pages/registro.html
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="/css/style.css">
     <title>Registrarse</title>
 </head>
-<body id="main-body">
+<body id="main-body" class="bg-dark d-flex flex-column min-vh-100">
 
 <!-- BARRA DE NAVEGACION -->
 
     <nav class="navbar  navbar-expand-lg  bg-body-tertiary p-0" data-bs-theme="dark">
         <div class="container-fluid navbar_color p-3">
-          <a class="navbar-brand a_color fw-bold" href="index.html">DevTracker</a>
+          <a class="navbar-brand a_color fw-bold" href="/index.html">DevTracker</a>
           <button class="navbar-toggler toggler_color " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon" ></span>
           </button>
           <div class="collapse navbar-collapse a_color" id="navbarSupportedContent">
             <ul class="navbar-nav m-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active li_color" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link active li_color" aria-current="page" href="/index.html">Inicio</a>
               </li>
             </ul> 
           </div>
@@ -55,7 +55,8 @@
 
       <!-- FOOTER -->
       
-      <footer class="container-fluid fixed-bottom bg-dark-subtle p-3" data-bs-theme="dark">
+
+      <footer class="container-fluid mt-auto bg-dark-subtle p-3" data-bs-theme="dark">
         <div class="row " >
           <div class="col-md-4 col-sm-6  footer-columns-color text-center">
             <p class="lead ">Redes sociales</p>
