--- a/pages/succesful_login.html
+++ b/pages/succesful_login.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="/css/style.css">
 
     <title>Sesion iniciada</title>
 </head>
 
-<body id="main-body">    <!--Main body para aplicar fondo responsive--> 
+<body id="main-body" class="bg-dark d-flex flex-column min-vh-100">    <!--Main body para aplicar fondo responsive--> 
 
   <!-- NAVBAR -->
     <nav class="navbar  navbar-expand-lg  bg-body-tertiary p-0" data-bs-theme="dark">
@@ -88,50 +88,50 @@
       </div>
 
 <!-- FOOTER -->
-      <footer class="container-fluid fixed-bottom bg-dark-subtle p-3" data-bs-theme="dark">
-        <div class="row " >
-          <div class="col-md-4 col-sm-6  footer-columns-color text-center">
-            <p class="lead ">Redes sociales</p>
-            <hr>
-            <div class="row">
-              <div class="col-6">
-                <ul class="navbar-nav">
-                  <li><a href="" class="nav-link link-underline-opacity-0 ">Red Social 2</a></li>
-                  <li><a href="" class="nav-link link-underline-opacity-0 ">Red Social 3</a></li>
-                  <li><a href="" class="nav-link link-underline-opacity-0 ">Red Social 1</a></li>
-                </ul>
-              </div>
-              <div class="col-6">
-                <ul class="navbar-nav">
-                  <li><a href="" class="nav-link link-underline-opacity-0 ">Red Social 2</a></li>
-                  <li><a href="" class="nav-link link-underline-opacity-0 ">Red Social 3</a></li>
-                  <li><a href="" class="nav-link link-underline-opacity-0 ">Red Social 1</a></li>
-                </ul>
-              </div>
 
-            </div>
-          </div>
-          <div class="col-md-5 col-sm-6">
-            <div class="card">
-              <div class="card-header" >
-                Quote
-              </div>
-              <div class="card-body">
-                <blockquote class="blockquote mb-0">
-                  <p>La programación es el arte de enseñarle a la máquina a soñar en código.</p>
-                  <div class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></div>
-                </blockquote>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-12   footer-columns-color">
-           <hr class="d-sm-block d-md-none">
-            <p class="lead text-center">Esto es otro contenido</p>
-            <hr>
-          </div>
+<footer class="container-fluid mt-auto bg-dark-subtle p-3" data-bs-theme="dark">
+  <div class="row " >
+    <div class="col-md-4 col-sm-6  footer-columns-color text-center">
+      <p class="lead ">Redes sociales</p>
+      <hr>
+      <div class="row">
+        <div class="col-6">
+          <ul class="navbar-nav">
+            <li><a href="" class="nav-link link-underline-opacity-0 ">Red Social 2</a></li>
+            <li><a href="" class="nav-link link-underline-opacity-0 ">Red Social 3</a></li>
+            <li><a href="" class="nav-link link-underline-opacity-0 ">Red Social 1</a></li>
+          </ul>
         </div>
-      </footer>
+        <div class="col-6">
+          <ul class="navbar-nav">
+            <li><a href="" class="nav-link link-underline-opacity-0 ">Red Social 2</a></li>
+            <li><a href="" class="nav-link link-underline-opacity-0 ">Red Social 3</a></li>
+            <li><a href="" class="nav-link link-underline-opacity-0 ">Red Social 1</a></li>
+          </ul>
+        </div>
 
+      </div>
+    </div>
+    <div class="col-md-5 col-sm-6">
+      <div class="card">
+        <div class="card-header" >
+          Quote
+        </div>
+        <div class="card-body">
+          <blockquote class="blockquote mb-0">
+            <p>La programación es el arte de enseñarle a la máquina a soñar en código.</p>
+            <div class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></div>
+          </blockquote>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3 col-sm-12   footer-columns-color">
+     <hr class="d-sm-block d-md-none">
+      <p class="lead text-center">Esto es otro contenido</p>
+      <hr>
+    </div>
+  </div>
+</footer>
 
 </body>
 </html>
