Proyecto con bootstrap y sass funcionable

--- a/pages/mis_proyectos.html
+++ b/pages/mis_proyectos.html
@@ -48,11 +48,14 @@
         <h1 class="text-light text-center mt-3">Mis proyectos</h1>
       
       <div class="container-fluid mt-5 p_inicio">
+      
+      <!-- APARTIR DE AQUI HABILITAR UN BOTON PARA MOSTRAR CONTENIDO, SOLO DEBEN VERSE LOS ENCABEZADOS EN LA VISTA MOBILE -->
         <div class="row ">
-            <div class="col-3 border ">
-                <h5 class="mt-2">Proyectos recientes</h5>
+            <div class="col-3 border d-md-block"> 
+              <!-- <h5 class="d-sm-block d-md-none"  data-bs-toggle="collapse" data-bs-target="#recent_projects" aria-expanded="false" aria-controls="recent_projects">Proyectos recientes</h5> -->
+                <h5 class="mt-2 ">Proyectos recientes</h5>
                 <hr>
-                <ul class="">
+                <ul class="" id="recent_projects">
                     <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Proyecto 1</a></li>
                     <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Proyecto 2</a></li>
                     <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Proyecto 3</a></li>
@@ -61,16 +64,16 @@
                 </ul>
             </div>
             <div class="col-6 border">
-                <h5 class="mt-2">Proyecto actual</h5><hr>
+                <h5 class="mt-2 make_bigger">Proyecto actual</h5><hr>
                 <p>Descripcion del proyecto ...</p>
                 <hr>
                 <h6>Tareas a realizar</h6>
                 <ul>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Task 1  fecha deadline</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Task 2  fecha deadline</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Task 3  fecha deadline</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Task 4  fecha deadline</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Task 5  fecha deadline</a></li> 
+                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4 p-1  task">Task 1  fecha deadline</a></li>
+                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4 p-1  task">Task 2  fecha deadline</a></li>
+                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4 p-1  task">Task 3  fecha deadline</a></li>
+                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4 p-1  task">Task 4  fecha deadline</a></li>
+                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4 p-1  task">Task 5  fecha deadline</a></li> 
                 </ul>
             </div>
 
@@ -78,11 +81,11 @@
                 <h5 class="mt-2">Tareas por vencer</h5>
                 <hr>
                 <ul>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Task 1  fecha deadline</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Task 2  fecha deadline</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Task 3  fecha deadline</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Task 4  fecha deadline</a></li>
-                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4">Task 5  fecha deadline</a></li>
+                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4 p-1 task ">Task 1  fecha deadline</a></li>
+                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4 p-1 task">Task 2  fecha deadline</a></li>
+                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4 p-1 task">Task 3  fecha deadline</a></li>
+                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4 p-1 task">Task 4  fecha deadline</a></li>
+                    <li><a href="" class="nav-link link-underline-opacity-0 mt-4 p-1 task">Task 5  fecha deadline</a></li>
                 </ul>
             </div>
         </div>
