--- a/index.html
+++ b/index.html
@@ -11,16 +11,23 @@
 </head>
 <body id="main-body" class=" d-flex flex-column bg-dark min-vh-100">
 
+<!-- ANIMACION LOGO -->
+
+  <!-- <div id="logo-animation">
+    <p id="logo">DevTracker</p>
+  </div> -->
+
+
     <nav class="navbar  navbar-expand-lg  bg-body-tertiary p-0" data-bs-theme="dark">
         <div class="container-fluid navbar_color p-3">
-          <a class="navbar-brand a_color fw-bold" href="#">DevTracker</a>
+          <a class="navbar-brand a_color fw-bold ps-2" id="logo" href="#">DevTracker</a>
           <button class="navbar-toggler toggler_color " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon" ></span>
           </button>
           <div class="collapse navbar-collapse a_color" id="navbarSupportedContent">
             <ul class="navbar-nav m-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active li_color" aria-current="page" href="#">Inicio</a>
+                <a class="nav-link active li_color custom_links" aria-current="page" href="#">Inicio</a>
               </li>
 
               <!-- SE DESPLEGARA CUANDO SE INICIE SESION -->
